[package]
name = "eve"
version = "0.1.0"
authors = ["Christopher Dignam <chris@dignam.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.0.11"
jsonwebtoken = "7.1.2"
structopt = "0.3.15"

[dev-dependencies]
insta = "1.3.0"
